--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -65,6 +66,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10",
+    "bufferutil": "4.0.7",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "eslint-config-prettier": "^9.1.0",
@@ -74,7 +76,9 @@
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "supports-color": "8.1.1",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "utf-8-validate": "5.0.10"
   }
 }
