--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "format:fix": "next lint && prettier --write --ignore-path .gitignore .",
     "prepare": "husky install"
   },
   "dependencies": {
