--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
+    "supabase": ">=1.8.1",
     "supports-color": "8.1.1",
     "tailwindcss": "^3",
     "typescript": "^5",
